--- a/public/courier_view_jobs.html
+++ b/public/courier_view_jobs.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/styles.css?v=1746623549">
-  <script type="module" src="styles/send_offer_modal.css?v=1746623549" defer></script>
+  <script type="module" src="js/courier_view_jobs_controller.js?v=1746623549" defer></script>  
   <script type="module" src="js/utils.js?v=1746623549" defer></script>
   
   <title>صفحة المندوب</title>
@@ -21,7 +21,6 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1746623549"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1746623549"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1746623549"></script>
-  <script type="module" src="./js/courier_view_jobs_controller.js?v=1746623549" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
 </body>
