--- a/public/courier_view_jobs.html
+++ b/public/courier_view_jobs.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/styles.css?v=1746693511">
+  <link rel="stylesheet" href="styles/styles.css?v=1746696300">
+  <link rel="stylesheet" href="styles/send_offer_modal.css?v=1746696300">
+
   
   <title>صفحة المندوب</title>
 </head>
@@ -16,11 +18,11 @@
   </div>
 
   <a href="signin.html">تسجيل الخروج</a>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1746693511"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1746693511"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1746693511"></script>
-  <script type="module" src="js/courier_view_jobs_controller.js?v=1746693511" defer></script>  
-  <script type="module" src="js/utils.js?v=1746693511" defer></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1746696300"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1746696300"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1746696300"></script>
+  <script type="module" src="js/courier_view_jobs_controller.js?v=1746696300" defer></script>  
+  <script type="module" src="js/utils.js?v=1746696300" defer></script>
 
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
